// Vitest Snapshot v1

exports[`#perf > works in performance and mocks 1`] = `
{
  "htmlString": "",
  "perf": {
    "end": [Function],
    "prefix": [Function],
    "start": [Function],
    "stop": [Function],
    "timings": [
      {
        "duration": 0.026834,
        "name": "test",
      },
      {
        "duration": 0.014667,
        "name": "prefix.prefix",
      },
    ],
  },
  "settings": {
    "debug": {
      "performance": true,
    },
  },
  "uid": "xxxxxxxx",
}
`;

exports[`#perf works in performance and mocks 1`] = `
Object {
  "htmlString": "",
  "perf": Object {
    "end": [Function],
    "prefix": [Function],
    "start": [Function],
    "stop": [Function],
    "timings": Array [
      Object {
        "duration": 0.05,
        "name": "Page",
      },
    ],
  },
  "settings": Object {
    "debug": Object {
      "performance": true,
    },
  },
  "uid": "xxxxxxxx",
}
`;
